@@ -1,18 +1,23 @@
-#!/usr/bin/env bash
+#!/usr/bin/env sh
 
-changed_java_files=("$@")
-
-VERSION=1.9
-NAME=google-java-format-$VERSION
-CMD=$NAME-all-deps.jar
+VERSION=1.12.0
+JARFILE=google-java-format-$VERSION-all-deps.jar
 
 mkdir -p .cache
 cd .cache
-if [ ! -f $CMD ]
+if [ ! -f $JARFILE ]
 then
-    curl -LJO "https://github.com/google/google-java-format/releases/download/$NAME/$CMD"
-    chmod 755 $CMD
+    curl -LJO "https://github.com/google/google-java-format/releases/download/v$VERSION/$JARFILE"
+    chmod 755 $JARFILE
 fi
 cd ..
 
-java -jar .cache/$CMD --replace "${changed_java_files[@]}"
+changed_java_files=$(git diff --cached --name-only --diff-filter=ACMR | grep ".*java$" )
+echo $changed_java_files
+java \
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+  -jar .cache/$JARFILE --replace $changed_java_files
